@@ -4,26 +4,24 @@ package de.dhbw.ics.manager;
 import de.dhbw.ics.controller.web.ResultMessage;
 import de.dhbw.ics.database.dao.*;
 import de.dhbw.ics.vo.*;
+import org.hamcrest.CoreMatchers;
 import org.junit.Before;
+import org.junit.FixMethodOrder;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.mockito.Mock;
+import org.junit.runners.MethodSorters;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.test.context.junit4.SpringRunner;
-import org.junit.FixMethodOrder;
-import org.junit.runners.MethodSorters;
-
 
 import java.math.BigDecimal;
-import java.util.Arrays;
-import java.util.Calendar;
-import java.util.List;
+import java.util.*;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertThat;
 
 //Sorts by method name
 @FixMethodOrder(MethodSorters.NAME_ASCENDING)
@@ -44,9 +42,6 @@ public class ReservationManagerTest {
     private ReservationDao reservationDao;
 
     @MockBean
-    private PresentationManager presentationManager;
-
-    @MockBean
     private PresentationDao presentationDao;
 
     @MockBean
@@ -54,9 +49,6 @@ public class ReservationManagerTest {
 
     @MockBean
     private BusySeatDao busySeatDao;
-
-    @MockBean
-    private MovieDao movieDao;
 
     @MockBean
     private UserDao userDao;
@@ -85,87 +77,217 @@ public class ReservationManagerTest {
     private SeatCategory seatCategory;
     private Room room;
     private User user;
+    private User user2;
     private Role role;
+    private Role role2;
     private Ticket ticket;
     private PresentationCategory presentationCategory;
+    private BusySeat busySeat1;
+    private BusySeat busySeat2;
 
 
     @Before
     public void setUp() {
+        this.role = new Role("Guest");
+        this.user = new User("test@gmx.de", null, role);
+        this.user.setFirstName("Max");
+        this.user.setLastName("Mustermann");
+
+        this.role2 = new Role("User");
+        this.user2 = new User("test22@gmx.de", "124mgm", role2);
+        this.user2.setFirstName("Max");
+        this.user2.setLastName("Mustermann");
+        Mockito.when(this.userDao.persist(user)).thenReturn(true);
+        Mockito.when(this.userDao.get(user.getEmail())).thenReturn(user);
+        Mockito.when(this.userDao.get(user2.getEmail())).thenReturn(user2);
+        Mockito.when(this.userDao.get("test@gmail.com")).thenReturn(null);
+        Mockito.when(this.reservationDao.getAllByUser(user2)).thenReturn(null);
+
+
+        this.reservation = new Reservation(Calendar.getInstance().getTimeInMillis(), false);
+        this.reservation.setUser(user);
+        this.reservation.setNumber(100);
+        Mockito.when(this.reservationDao.getByNumber(reservation.getNumber())).thenReturn(reservation);
+        Reservation res = new Reservation(this.reservation);
+        res.setUser(this.user2);
+        Mockito.when(this.reservationDao.getByNumber(99)).thenReturn(res);
 
         this.room = new Room("3D", true, true, 1);
         this.seatCategory = new SeatCategory("test", "test");
 
-        this.seat1 = new Seat(room, seatCategory, 1, 1);
-        this.seat2 = new Seat(room, seatCategory, 2, 1);
+        this.seat1 = new Seat(this.room, this.seatCategory, 1, 1);
+        this.seat2 = new Seat(this.room, this.seatCategory, 2, 1);
 
         this.genre = new Genre("test");
         this.movie = new Movie(2018, "test", "test", genre, 18, 120);
 
         this.presentationCategory = new PresentationCategory("test", "test");
-        this.presentation = new Presentation(movie, room, Calendar.getInstance().getTimeInMillis(), presentationCategory);
-        this.priceCategory = new PriceCategory(presentationCategory, seatCategory, "Test", "test", new BigDecimal("10.00"));
+        this.presentation = new Presentation(this.movie,  this.room, Calendar.getInstance().getTimeInMillis(), presentationCategory);
+        this.priceCategory = new PriceCategory( this.presentationCategory,  this.seatCategory, "Test", "test", new BigDecimal("10.00"));
 
-        Mockito.when(this.priceCategoryDao.getAll()).thenReturn(Arrays.asList(priceCategory));
-
-        Mockito.when(this.presentationDao.get(presentation.getUuid())).thenReturn(presentation);
-        Mockito.when(this.presentationDao.getAll()).thenReturn(Arrays.asList(presentation));
-        Mockito.when(this.presentationDao.delete(presentation.getUuid())).thenReturn(true);
-        Mockito.when(this.presentationDao.getPresentationsByMovieAndDateInterval(1, 1, movie.getUuid())).thenReturn(Arrays.asList(presentation));
-        Mockito.when(this.presentationDao.getPresentationsByTitleAndDateInterval(1, 1, movie.getTitle())).thenReturn(Arrays.asList(presentation));
-        Mockito.when(this.presentationDao.getPresentationsBetweenInterval(1, 2)).thenReturn(Arrays.asList(presentation));
-        Mockito.when(this.presentationDao.persist(presentation)).thenReturn(true);
-
-        Mockito.when(this.movieDao.getAll()).thenReturn(Arrays.asList(movie));
-        Mockito.when(this.movieDao.getMovieByTitle(movie.getTitle())).thenReturn(Arrays.asList(movie));
-        Mockito.when(this.movieDao.getMoviesBetweenDate(1, 2)).thenReturn(Arrays.asList(movie));
-
+        Mockito.when(this.presentationDao.get( this.presentation.getUuid())).thenReturn( this.presentation);
         Mockito.when(this.seatDao.getAllByRoom(room)).thenReturn(Arrays.asList(seat1, seat2));
-        Mockito.when(this.busySeatDao.getAllByPresentation(presentation)).thenReturn(null);
+        Mockito.when(this.seatDao.get(this.seat1)).thenReturn(this.seat1);
+        Mockito.when(this.seatDao.get(this.seat2)).thenReturn(this.seat2);
 
-        role = new Role("testRole");
-        roleDao.persist(role);
-        user = new User("test@gmx.de", "124mgm", role);
-        userDao.persist(user);
-        reservation = new Reservation(Calendar.getInstance().getTimeInMillis(), false);
-        reservation.setUser(user);
-        reservation.setNumber(42);
+        this.busySeat1 = new BusySeat(true, this.seat1, this.presentation, false, "", 100);
+        this.busySeat2 = new BusySeat(false, this.seat2, this.presentation, false, "", 100);
+        Map<String, Object> map1 = new HashMap<>();
+        map1.put("p", this.presentation);
+        map1.put("s", this.seat1);
+        Mockito.when(this.busySeatDao.get(map1)).thenReturn(this.busySeat1);
 
-        Mockito.when(this.userDao.persist(user)).thenReturn(true);
-        Mockito.when(this.userDao.get(user.getEmail())).thenReturn(user);
+        Map<String, Object> map2 = new HashMap<>();
+        map2.put("p", this.presentation);
+        map2.put("s", this.seat2);
+        Mockito.when(this.busySeatDao.get(map2)).thenReturn(this.busySeat2);
+        Mockito.when(this.busySeatDao.persistBatch(Arrays.asList(this.busySeat1, this.busySeat2))).thenReturn(true);
+        Mockito.when(this.busySeatDao.persistBatch(Arrays.asList(this.busySeat1, Mockito.any()))).thenReturn(true);
+        Mockito.when(this.busySeatDao.persistBatch(Arrays.asList(this.busySeat2))).thenReturn(false);
 
-        Mockito.when(this.reservationDao.getByNumber(reservation.getNumber())).thenReturn(reservation);
-        Mockito.when(this.reservationDao.delete(reservation.getUuid())).thenReturn(true);
+
     }
 
     @Test
-    public void test1persistUser() {
-        assertNotEquals(reservationManager.persistUser(user).getClass(), ResultMessage.class);
+    public void testPersistUser() {
+        User u = new User("", "test1235", new Role("test"));
+        assertEquals(this.reservationManager.persistUser(u), ResultMessage.WRONG_EMAIL);
+
+        u = new User("tgw eklfw@fe.ew.de", "test1235", new Role("test"));
+        assertEquals(this.reservationManager.persistUser(u), ResultMessage.WRONG_EMAIL);
+
+        Role role = new Role("User");
+        u = new User("test22@gmx.de", "", role);
+        assertEquals(this.reservationManager.persistUser(u), ResultMessage.MISSING_FIRSTNAME);
+
+        u.setFirstName("Max");
+        assertEquals(this.reservationManager.persistUser(u), ResultMessage.MISSING_LASTNAME);
+        u.setLastName("Mustermann");
+        assertEquals(this.reservationManager.persistUser(u), ResultMessage.USER_NEEDS_PASSWORD);
+
+        u = new User("test22@gmx.de", "te", role);
+        u.setLastName("Mustermann");
+        u.setFirstName("Max");
+        assertEquals(this.reservationManager.persistUser(u), ResultMessage.USER_NEEDS_PASSWORD);
+        assertEquals(this.reservationManager.persistUser(this.user2), this.user2);
+        assertEquals(this.reservationManager.persistUser(this.user), this.user);
+
+        u = new User("test@gmail.com", null,null);
+        u.setLastName(this.user.getLastName());
+        u.setFirstName(this.user.getFirstName());
+
+        assertEquals(this.reservationManager.persistUser(u), ResultMessage.COULD_NOT_PERSIST_USER);
+
     }
+
+    @Test
+    public void testGetUser() {
+        assertEquals(this.reservationManager.getUser(null, null), ResultMessage.WRONG_EMAIL);
+        assertEquals(this.reservationManager.getUser("test@gmx.de", null), this.user);
+        assertEquals(this.reservationManager.getUser("test22@gmx.de", null), ResultMessage.WRONG_PASSWORD);
+        assertEquals(this.reservationManager.getUser("test22@gmx.de", "eef"), ResultMessage.WRONG_PASSWORD);
+        assertEquals(this.reservationManager.getUser("test22@gmx.de", "124mgm"), this.user2);
+    }
+
+    @Test
+    public void testGetReservation() {
+        assertEquals(this.reservationManager.getReservation(null, 0), ResultMessage.WRONG_EMAIL);
+        assertEquals(this.reservationManager.getReservation("test@gmx.de", 0), ResultMessage.RESERVATION_IS_NULL);
+        assertEquals(this.reservationManager.getReservation("tewgwfw@web.de", 100), ResultMessage.USER_NOT_FOUND);
+        assertEquals(this.reservationManager.getReservation("test@gmx.de", 22), ResultMessage.RESERVATION_IS_NULL);
+        assertEquals(this.reservationManager.getReservation("test@gmx.de", 99), ResultMessage.RESERVATION_USER_UNMATCHING);
+        assertEquals(this.reservationManager.getReservation("test@gmx.de", 100), this.reservation);
+    }
+
+    @Test
+    public void testLockMechanism() {
+        assertEquals(this.reservationManager.lockSeats("",null, "",true), ResultMessage.MISSING_PRESENTATION_ID);
+        assertEquals(this.reservationManager.lockSeats("fwef",null, "",true), ResultMessage.NO_SEAT_TO_LOCK);
+        assertEquals(this.reservationManager.lockSeats("wgwgw", Arrays.asList(this.seat1, this.seat2), "",true), ResultMessage.MISSING_SESSION_ID);
+        assertEquals(this.reservationManager.lockSeats("wefwef", Arrays.asList(this.seat1, this.seat2), "testID",true), ResultMessage.PRESENTATION_NOT_FOUND);
+        assertEquals(this.reservationManager.lockSeats(this.presentation.getUuid(), Arrays.asList(this.seat1, new Seat(this.room, this.seatCategory, 1, 4)),"testID", true), ResultMessage.SEAT_NOT_FOUND);
+
+        this.busySeat1.setBusy(true);
+        assertEquals(this.reservationManager.lockSeats(this.presentation.getUuid(), Arrays.asList(this.seat1, this.seat2),"testID", true), ResultMessage.SEAT_TAKEN);
+        this.busySeat1.setBusy(false);
+        this.busySeat1.setLocked(true);
+        this.busySeat1.setSessionID("testID");
+        this.busySeat1.setTimestamp(Calendar.getInstance().getTimeInMillis());
+        assertEquals(this.reservationManager.lockSeats(this.presentation.getUuid(), Arrays.asList(this.seat1, this.seat2),"test2ID", true), ResultMessage.LOCKED_SEAT);
+
+        this.busySeat1.setLocked(false);
+        this.busySeat1.setSessionID("");
+        this.busySeat1.setTimestamp(0);
+        Object result = this.reservationManager.lockSeats(this.presentation.getUuid(), Arrays.asList(this.seat1, this.seat2),"testID", true);
+        assertThat(result, CoreMatchers.instanceOf(List.class));
+        List resultList = (List<Seat>) result;
+        assertEquals(resultList.size(), 2);
+        assertEquals(resultList.get(0), this.seat1);
+        assertEquals(resultList.get(1), this.seat2);
+
+        Seat s = new Seat(room, seatCategory, 1, 5);
+        Mockito.when(this.seatDao.get(s)).thenReturn(s);
+
+        result = this.reservationManager.lockSeats(this.presentation.getUuid(), Arrays.asList(this.seat1, s),"testID", true);
+        assertThat(result, CoreMatchers.instanceOf(List.class));
+        resultList = (List<Seat>) result;
+        assertEquals(resultList.size(), 2);
+        assertEquals(resultList.get(0), this.seat1);
+        assertEquals(resultList.get(1), s);
+
+        assertEquals(this.reservationManager.lockSeats(this.presentation.getUuid(), Arrays.asList(this.seat2),"testID", true), ResultMessage.COULD_NOT_BLOCK_SEATS);
+
+        this.busySeat1.setBusy(true);
+        assertEquals(this.reservationManager.lockSeats(this.presentation.getUuid(), Arrays.asList(this.seat1,this.seat2),"testID", false), ResultMessage.SEAT_TAKEN);
+        this.busySeat1.setBusy(false);
+        this.busySeat1.setLocked(true);
+        this.busySeat1.setSessionID("testID");
+
+        this.busySeat2.setBusy(false);
+        this.busySeat2.setLocked(true);
+        this.busySeat2.setSessionID("testID2");
+        assertEquals(this.reservationManager.lockSeats(this.presentation.getUuid(), Arrays.asList(this.seat1,this.seat2),"testID2", false), ResultMessage.COULD_NOT_UNBLOCK_SEATS);
+
+
+        this.busySeat2.setBusy(false);
+        this.busySeat2.setLocked(true);
+        this.busySeat2.setSessionID("testID");
+        result = this.reservationManager.lockSeats(this.presentation.getUuid(), Arrays.asList(this.seat1,this.seat2),"testID", false);
+        assertThat(result, CoreMatchers.instanceOf(List.class));
+        resultList = (List<Seat>) result;
+        assertEquals(resultList.size(), 2);
+        assertEquals(resultList.get(0), this.seat1);
+        assertEquals(resultList.get(1), this.seat2);}
+
+
     @Test
     public void test2persistReservation(){
-        reservationManager.persistReservation(reservation, "239d2938dh392d93");
-    }
-    @Test
-    public void test3getUser() {
-        User testUser = (User) reservationManager.getUser(user.getEmail(), user.getPassword());
-        assertEquals(testUser.getEmail(), user.getEmail());
-        assertEquals(testUser.getPassword(), user.getPassword());
-    }
-    @Test
-    public void test4getReservation() {
-        Reservation testReservation = (Reservation) reservationManager.getReservation(reservation.getUser().getEmail(), reservation.getNumber());
-        assertEquals(testReservation.getTickets(), reservation.getTickets());
-        assertEquals(testReservation.getDate(), reservation.getDate());
-        assertEquals(testReservation.getNumber(), reservation.getNumber());
-        assertEquals(testReservation.getUser(), reservation.getUser());
-        assertEquals(testReservation.getUuid(), reservation.getUuid());
-    }
-    @Test
-    public void test5lockSeats(){
-        reservationManager.lockSeats(presentation.getUuid(), List.of(seat1, seat2), "239d2938dh392d93", true);
+        assertEquals(this.reservationManager.persistReservation(null, ""), ResultMessage.RESERVATION_IS_NULL);
+        assertEquals(this.reservationManager.persistReservation(this.reservation, ""), ResultMessage.MISSING_TICKETS);
+        this.reservation.setUser(null);
+        Ticket ticket = new Ticket(this.seat1, this.priceCategory, this.presentation);
+        this.reservation.setTickets(Arrays.asList(ticket));
+        assertEquals(this.reservationManager.persistReservation(this.reservation, ""), ResultMessage.MISSING_USER);
+        this.reservation.setUser(new User("test@gmail.com", "", this.role));
+        assertEquals(this.reservationManager.persistReservation(this.reservation, ""), ResultMessage.USER_NOT_FOUND);
+
+        this.reservation.setUser(new User(this.user2.getEmail(), "", this.role2));
+        assertEquals(this.reservationManager.persistReservation(this.reservation, ""), ResultMessage.USER_NEEDS_PASSWORD);
+
+        this.reservation.setUser(new User(this.user2.getEmail(), "geg", this.role2));
+        assertEquals(this.reservationManager.persistReservation(this.reservation, ""), ResultMessage.WRONG_PASSWORD);
+
+        ticket = new Ticket(this.seat1, this.priceCategory, new Presentation(this.movie, this.room, 1814912, this.presentationCategory));
+        this.reservation.setUser(this.user);
+        this.reservation.setTickets(Arrays.asList(ticket));
+        assertEquals(this.reservationManager.persistReservation(this.reservation, ""), ResultMessage.PRESENTATION_NOT_FOUND);
+        ticket = new Ticket(this.seat1, this.priceCategory, null);
+        this.reservation.setTickets(Arrays.asList(ticket));
+        assertEquals(this.reservationManager.persistReservation(this.reservation, ""), ResultMessage.PRESENTATION_NOT_SET);
+
 
     }
+
     @Test
     public void test6deleteReservation(){
         assertEquals(reservationManager.deleteReservation(reservation.getUser().getEmail(), reservation.getNumber()), ResultMessage.SUCCESS);
